# adc_vdi

./: .gitignore  .gitmodules  README.md
competition_day/: calibration_procedure
dday/: calibration_procedure
src/: line_follower.py  test.py
src/CarModel/URDF/: car.urdf.xacro
src/ackermann_stop_node/: CMakeLists.txt  package.xml
src/ampel/: package.xml  setup.cfg  setup.py
src/ampel/ampel/: ampel.py
src/cpp_packages/: CMakeLists.txt  package.xml
src/cpp_packages/src/: lane_detector.cpp
src/depth_from_rgb/: package.xml  setup.cfg  setup.py
src/depth_from_rgb/depth_from_rgb/: depth_from_rgb.py
src/frame_samples_zed_troubleshoot/4/: test.py  zed.cpp
src/lane_recognition/: README.md  birdsEyeView.py  lane.py  package.xml  setup.py
src/lane_recognition/lane_recognition/: check.py  dashed.py  image_pub.py  lane_recognition.py  lane_recognition_backup.py  new_lane_recognition.py
src/lane_recognition/launch/: lane_recognition.launch.py
src/lane_recognition_cpp/: CMakeLists.txt
src/lane_recognition_cpp/src/: lane_recognition_cpp.cpp
src/legacy_code/: ATS.py  Ampel.py  Anleitung  Beschleunigung1500.py  Gestrichelt.py  Lanecontrol.py  LanecontrolSchilder.py  Rundkurs.py  Rundkurs_1500.py  Rundkurs_alt.py  Rundkurs_neu.py  Schilder.py  control_example_Sensor.py  deparkingCrossRight.py  deparkingParallelRight.py  hard_code_ctrl.py  parkingCrossRight.py  parkingCrossRight_hardcode.py  parkingParallelRight.py  parkingParallelRight_hardcode.py  parkingSchilder.py
src/line_follower/: CMakeLists.txt  line_follower.py  package.xml  setup.py
src/line_follower/line_follower/: cross_parking.py  cross_parking_aus.py  follower.py  lidar.py  line_follower.py  parallel_parking.py  parallel_parking_aus.py  static_overtaking.py  teleop.py
src/line_follower/line_follower/legacy/: cross_parking_ctrl.py  deparkingCrossRight.py  hard_code_ctrl.py  parkingCrossRight.py  parkingCrossRight_hardcode.py  parkingParallelRight.py  parkingcontrol.py
src/line_follower/scripts/: lane.py  line_follower.py
src/line_recognition/: ATS.py  lane.py
src/realsense_launch_command/: realsense_launch_command.txt
src/schilder/: package.xml  setup.cfg  setup.py
src/schilder/schilder/: schilder.py  schilder_new.py
src/sign_detection/: CMakeLists.txt  listener_opencv.py  only_opencv_ros.py  package.xml  publishing_usbimg.py
src/sign_detection/scripts/: image_processor_only_opencv.py  publishing_usbimg.py
src/speed_controller/: CMakeLists.txt  README.md  package.xml
src/speed_controller/speed_controller/: linear_speed_control.py
src/team_interfaces/: CMakeLists.txt  package.xml
src/team_interfaces/msg/: Emergency.msg  Lane.msg  Signs.msg  Trafficlight.msg  Trafficlightuse.msg
src/traffic_control_system_detection/: CMakeLists.txt  Doku.txt  inferencecli.txt  package.xml
src/traffic_control_system_detection/model_files/: build.py  export-det.py  export_to_trt.py
src/traffic_control_system_detection/scripts/: image_processor_only_opencv.py  image_processor_tensorrt.py  pycuda_api.py  traffic_light.py
src/traffic_control_system_detection_cpp/: CMakeLists.txt  package.xml
src/traffic_control_system_detection_cpp/scripts/: image_processor_only_opencv.cpp  listener_opencv.py
src/vehicle_control/: CMakeLists.txt  package.xml
src/vehicle_control/config/: control_config.yaml
src/vehicle_control/launch/: autonomous_control.launch.py  manual_control.launch.py  parking_control.launch.py
src/vehicle_control/vehicle_control/: ackermann_to_vesc.py  cross_parking_out.py  emergency_stop_publisher.py  joy_to_ackermann.py  parrallel_parking_out.py  rc_to_joy.py  trigger_node.py
src/vesc_firmware/config/: team_functional_4_2.xml  team_tweaked_4_2.xml
src/zed_perception/: CMakeLists.txt  package.xml
src/zed_perception/config/zed/: SN37550082.conf  common.yaml  zed.yaml
src/zed_perception/launch/: zed_launch.py
src/zed_perception/rviz/: zed.rviz
