<?xml version="1.0"?>
<package format="3">
  <name>traffic_control_system_detection</name>
  <version>0.1.0</version>
  <description>ROS2 package for image processing</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
 
  <license>GLP</license>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
